--- a/Projet - Prix appart.ipynb
+++ b/Projet - Prix appart.ipynb
@@ -1341,11 +1341,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "78db77e8-55f9-442c-b5ec-008d4c812a10",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loyer =1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_input = input(\"Loyer =\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1413,7 +1423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
