Petits ajustements mineurs
Corrections de petites erreurs

--- a/Projet - Prix appart.ipynb
+++ b/Projet - Prix appart.ipynb
@@ -72,7 +72,6 @@
     "\n",
     "# Fonction qui nous permet de récupérer le lien des annonces des logements\n",
     "# Les sites disponibles sont \"orpi\", \"nexity\" et \"lefigaro\"\n",
-    "\n",
     "def get_link(site):\n",
     "    # On récupère les caractèristiques pour le site 'orpi'\n",
     "    if (site=='orpi')==True:\n",
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 2,
    "id": "2d3a04ed-fdd6-4a1b-a4f2-09d547c1c322",
    "metadata": {},
    "outputs": [],
@@ -206,7 +205,7 @@
     "\n",
     "# e) Caractéristiques\n",
     "def options_orpi(soup):\n",
-    "    variables = [\"meublé\", \"ascenseur\", \"balcon\", \"terrasse\", \"cave\", \"terrain\", \"garage\"]\n",
+    "    variables = [\"meublé\", \"ascenseur\", \"balcon\", \"terrasse\", \"cave\", \"garage\", \"terrain\"]\n",
     "    text = soup.find_all(class_='u-flex u-flex-cross-center')\n",
     "    caracteristiques = list(np.zeros(7, dtype=float))\n",
     "    for i in range(len(text)-1):\n",
@@ -236,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 3,
    "id": "ecb93cd7-abaa-4fd5-8077-aeeb9b9a0ce2",
    "metadata": {},
    "outputs": [],
@@ -306,7 +305,7 @@
     "    user_agent = {'User-Agent':'Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:122.0) Gecko/20100101 Firefox/122.0'}\n",
     "    soup = get_page(urlpage)\n",
     "    link = [urlpage]\n",
-    "    appart = type_nexity(soup) + link\n",
+    "    appart = options_nexity(soup) + link\n",
     "    appart.insert(1, localisation_nexity(soup)[0])\n",
     "    appart.insert(2, localisation_nexity(soup)[1])\n",
     "    appart.insert(5, honoraires_nexity(soup)[0])\n",
@@ -326,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 4,
    "id": "0fe9aa66-1764-43a8-b175-7d6310c92b83",
    "metadata": {},
    "outputs": [],
@@ -431,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 5,
    "id": "8bf259db-50fb-45ac-82a7-37539b58a473",
    "metadata": {},
    "outputs": [],
@@ -493,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 6,
    "id": "0cf3bd01-8158-4fd3-a771-871f585a2eb9",
    "metadata": {},
    "outputs": [
@@ -501,7 +500,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.527223555246989\n"
+      "3.3273626367251077\n"
      ]
     },
     {
@@ -551,7 +550,7 @@
        "      <td>Neudorf</td>\n",
        "      <td>459.0</td>\n",
        "      <td>50.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>254.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>19.0</td>\n",
        "      <td>1.0</td>\n",
@@ -606,25 +605,6 @@
        "      <td>Appartement</td>\n",
        "      <td>Strasbourg</td>\n",
        "      <td>Neudorf</td>\n",
-       "      <td>337.0</td>\n",
-       "      <td>110.0</td>\n",
-       "      <td>364.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>https://www.orpi.com/annonce-location-appartem...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Appartement</td>\n",
-       "      <td>Strasbourg</td>\n",
-       "      <td>Neudorf</td>\n",
        "      <td>870.0</td>\n",
        "      <td>50.0</td>\n",
        "      <td>858.0</td>\n",
@@ -635,7 +615,26 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>https://www.orpi.com/annonce-location-appartem...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Appartement</td>\n",
+       "      <td>Strasbourg</td>\n",
+       "      <td>Forêt noire</td>\n",
+       "      <td>705.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>806.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>https://www.orpi.com/annonce-location-appartem...</td>\n",
        "    </tr>\n",
@@ -659,7 +658,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>164</th>\n",
+       "      <th>161</th>\n",
        "      <td>Appartement</td>\n",
        "      <td>Strasbourg</td>\n",
        "      <td>nan</td>\n",
@@ -678,7 +677,7 @@
        "      <td>https://immobilier.lefigaro.fr/annonces/annonc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>165</th>\n",
+       "      <th>162</th>\n",
        "      <td>Appartement</td>\n",
        "      <td>Strasbourg</td>\n",
        "      <td>nan</td>\n",
@@ -697,7 +696,7 @@
        "      <td>https://immobilier.lefigaro.fr/annonces/annonc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>166</th>\n",
+       "      <th>163</th>\n",
        "      <td>Appartement</td>\n",
        "      <td>Strasbourg</td>\n",
        "      <td>nan</td>\n",
@@ -716,7 +715,7 @@
        "      <td>https://immobilier.lefigaro.fr/annonces/annonc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>167</th>\n",
+       "      <th>164</th>\n",
        "      <td>Appartement</td>\n",
        "      <td>Strasbourg</td>\n",
        "      <td>nan</td>\n",
@@ -735,7 +734,7 @@
        "      <td>https://immobilier.lefigaro.fr/annonces/annonc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>168</th>\n",
+       "      <th>165</th>\n",
        "      <td>Appartement</td>\n",
        "      <td>Strasbourg</td>\n",
        "      <td>nan</td>\n",
@@ -755,53 +754,53 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>169 rows × 16 columns</p>\n",
+       "<p>166 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "            Type       Ville     Quartier   Loyer  Charges  Honoraires  \\\n",
-       "0    Appartement  Strasbourg      Neudorf   459.0     50.0         NaN   \n",
+       "0    Appartement  Strasbourg      Neudorf   459.0     50.0       254.0   \n",
        "1    Appartement  Strasbourg  Forêt noire   585.0    180.0         NaN   \n",
        "2    Appartement  Strasbourg    Robertsau   540.0     45.0       585.0   \n",
-       "3    Appartement  Strasbourg      Neudorf   337.0    110.0       364.0   \n",
-       "4    Appartement  Strasbourg      Neudorf   870.0     50.0       858.0   \n",
+       "3    Appartement  Strasbourg      Neudorf   870.0     50.0       858.0   \n",
+       "4    Appartement  Strasbourg  Forêt noire   705.0    110.0       806.0   \n",
        "..           ...         ...          ...     ...      ...         ...   \n",
-       "164  Appartement  Strasbourg          nan   880.0      0.0         NaN   \n",
-       "165  Appartement  Strasbourg          nan   610.0      0.0         NaN   \n",
-       "166  Appartement  Strasbourg          nan   850.0      0.0         NaN   \n",
-       "167  Appartement  Strasbourg          nan   674.0      0.0         NaN   \n",
-       "168  Appartement  Strasbourg          nan  2480.0    500.0         2.0   \n",
+       "161  Appartement  Strasbourg          nan   880.0      0.0         NaN   \n",
+       "162  Appartement  Strasbourg          nan   610.0      0.0         NaN   \n",
+       "163  Appartement  Strasbourg          nan   850.0      0.0         NaN   \n",
+       "164  Appartement  Strasbourg          nan   674.0      0.0         NaN   \n",
+       "165  Appartement  Strasbourg          nan  2480.0    500.0         2.0   \n",
        "\n",
        "     Pièces  Surface  Meublé  Ascenseur  Balcon  Terrasse  Cave  Parking  \\\n",
        "0       1.0     19.0     1.0        1.0     0.0       0.0   0.0      0.0   \n",
        "1       2.0     48.0     0.0        1.0     1.0       0.0   1.0      0.0   \n",
        "2       2.0     45.0     0.0        0.0     0.0       0.0   0.0      0.0   \n",
-       "3       1.0     28.0     0.0        1.0     0.0       0.0   1.0      0.0   \n",
-       "4       3.0     66.0     0.0        0.0     0.0       0.0   1.0      1.0   \n",
+       "3       3.0     66.0     0.0        0.0     0.0       0.0   1.0      0.0   \n",
+       "4       2.0     62.0     0.0        1.0     1.0       0.0   1.0      0.0   \n",
        "..      ...      ...     ...        ...     ...       ...   ...      ...   \n",
-       "164     2.0     37.0     0.0        0.0     0.0       0.0   0.0      0.0   \n",
-       "165     1.0     20.0     1.0        0.0     0.0       0.0   0.0      0.0   \n",
-       "166     2.0     45.0     1.0        0.0     0.0       0.0   0.0      0.0   \n",
-       "167     3.0     66.0     0.0        0.0     0.0       0.0   0.0      0.0   \n",
-       "168     7.0    274.0     0.0        0.0     0.0       0.0   1.0      0.0   \n",
+       "161     2.0     37.0     0.0        0.0     0.0       0.0   0.0      0.0   \n",
+       "162     1.0     20.0     1.0        0.0     0.0       0.0   0.0      0.0   \n",
+       "163     2.0     45.0     1.0        0.0     0.0       0.0   0.0      0.0   \n",
+       "164     3.0     66.0     0.0        0.0     0.0       0.0   0.0      0.0   \n",
+       "165     7.0    274.0     0.0        0.0     0.0       0.0   1.0      0.0   \n",
        "\n",
        "     Terrain                                              Liens  \n",
        "0        0.0  https://www.orpi.com/annonce-location-appartem...  \n",
        "1        0.0  https://www.orpi.com/annonce-location-appartem...  \n",
        "2        0.0  https://www.orpi.com/annonce-location-appartem...  \n",
-       "3        0.0  https://www.orpi.com/annonce-location-appartem...  \n",
+       "3        1.0  https://www.orpi.com/annonce-location-appartem...  \n",
        "4        0.0  https://www.orpi.com/annonce-location-appartem...  \n",
        "..       ...                                                ...  \n",
+       "161      0.0  https://immobilier.lefigaro.fr/annonces/annonc...  \n",
+       "162      0.0  https://immobilier.lefigaro.fr/annonces/annonc...  \n",
+       "163      0.0  https://immobilier.lefigaro.fr/annonces/annonc...  \n",
        "164      0.0  https://immobilier.lefigaro.fr/annonces/annonc...  \n",
        "165      0.0  https://immobilier.lefigaro.fr/annonces/annonc...  \n",
-       "166      0.0  https://immobilier.lefigaro.fr/annonces/annonc...  \n",
-       "167      0.0  https://immobilier.lefigaro.fr/annonces/annonc...  \n",
-       "168      0.0  https://immobilier.lefigaro.fr/annonces/annonc...  \n",
        "\n",
-       "[169 rows x 16 columns]"
+       "[166 rows x 16 columns]"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 7,
    "id": "64139367-9b49-4ae4-b4b7-7bfb63e928d0",
    "metadata": {},
    "outputs": [],
@@ -893,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 8,
    "id": "27af3bee-9d5c-4d5d-9f7d-c14eba4848bd",
    "metadata": {},
    "outputs": [],
@@ -914,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 9,
    "id": "d84e8bbd-b926-4ea4-8725-cdbdcde13cb9",
    "metadata": {},
    "outputs": [
@@ -922,8 +921,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimation du prix :  972.0 €\n",
-      "Interval de confiance du prix :  [848, 1097]\n"
+      "Estimation du prix :  884.0 €\n",
+      "Interval de confiance du prix :  [845, 922]\n"
      ]
     },
     {
@@ -941,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 10,
    "id": "a267acdc-c7f9-48c0-957b-9a5ac4fdb072",
    "metadata": {},
    "outputs": [
@@ -974,11 +973,11 @@
       "\n",
       "\n",
       "Annonce 4 :\n",
-      "Quartier :  Robertsau\n",
-      "Loyer :  1035 €\n",
-      "Surface :  123.0 m2 \n",
-      "Pièces :  4 \n",
-      "Lien :  https://immobilier.lefigaro.fr/annonces/annonce-66267494.html\n",
+      "Quartier :  Contades\n",
+      "Loyer :  960 €\n",
+      "Surface :  94.0 m2 \n",
+      "Pièces :  3 \n",
+      "Lien :  https://www.orpi.com/annonce-location-appartement-t3-strasbourg-67000-0dd1d9b5-67aa-4a2f-8f60-3da840710b8b/\n",
       "\n",
       "\n"
      ]
